--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <!-- Metas -->
    <meta charset="utf-8">
-   <title>Wessex Network</title>
+   <title>Demogexia - a Minecraft server</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
    <meta content="Not your ordinary Minecraft Skyblock game, believe me!" name="description">
    <meta content="width=device-width, initial-scale=1.0" name="viewport"><!-- Css -->
@@ -17,6 +17,13 @@
    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,500,600,700" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,300,400,400i,600,700,800" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-2635187009033577",
+          enable_page_level_ads: true
+     });
+</script>
 </head>
 <body>
    <!-- Preloader -->
@@ -67,8 +74,8 @@
                         <div class="col-sm-12 text-center">
                            <!--Inner hero-->
                            <div class="inner-hero logo">
-                              <h1 class="large text-white uppercase mb-0">Welcome to Wessex Skyblock!</h1>
-                              <h5 class="mb-0 text-white uppercase">Not your average-typical Skyblock game</h5>
+                              <h1 class="large text-white uppercase mb-0">Demogexia Survival</h1>
+                              <h5 class="mb-0 text-white uppercase">An experience you will never forget</h5>
                            </div>
                         </div><!--End row-->
                      </div><!--End container-->
@@ -81,7 +88,7 @@
          <header class="header default">
             <div class=" left-part">
                <a class="logo scroll" href="#wrapper">
-               <h2 class="mb-0 uppercase">Wessex Network</h2></a>
+               <h2 class="mb-0 uppercase">Demogexia</h2></a>
             </div>
             <div class="right-part">
                <nav class="main-nav">
@@ -111,12 +118,12 @@
                      <li>
                         <a class="scroll list-inline-item" href="#news"><i class="far fa-newspaper"></i> News</a>
                      </li>
-                     <li>
+                     <!--<li>
                         <a class="scroll list-inline-item" href="http://bans.wessex.site"><i class="fas fa-gavel"></i> Bans</a>
-                     </li>
-                     <li>
+                     </li>-->
+                     <!--<li>
                         <a class="scroll list-inline-item" href="https://www.facebook.com/groups/wessexcommunity/"><i class="fab fa-facebook-square"></i> FB Group</a>
-                     </li>
+                     </li>-->
                      <li>
                         <a class="scroll list-inline-item" href="https://discord.wessex.site/"><i class="fab fa-discord"></i> Discord</a>
                      </li>
@@ -148,7 +155,7 @@
             <!--Row-->
             <div class="row justify-content-center">
                <div class="list-inline-item">
-                  <h2 class="counter">Our server is <span id="counter" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565">0</span> other players!</h2><br>
+                  <h2 class="counter">Our server is <span id="counter" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565">0</span> other players!</h2><br>
                </div>
                <div class="col-12 col-lg-4">
                   <div class="block-content text-center gap-one-bottom-sm">
@@ -158,7 +165,7 @@
                            <a class="scroll" href="#status" onclick="demo4();copyFunction();"><span>Copy Server IP</span></a>
                         </div><!-- Status Container -->
                         <div class="copyText">
-                           <input id="server-ip" type="text" value="play.wessex.site">
+                           <input id="server-ip" type="text" value="play.demogexia.site">
                            <script>
                               function copyFunction() {
                                  var copyText = document.getElementById("server-ip");
@@ -229,107 +236,61 @@
          <div class="container">
             <!--Row-->
             <div class="row gap-one-bottom-sm">
+
+               <!--Administrator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Owner</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/avatar/40baa9819df144f7938b62bb2ee3360a.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/hyperVx2/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/avatar/b2de7bcb1a9e4c5e96e7891e52b2ca2a.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/_DrStrange/100.png"></a>
+                  </div>
+               </div>
+
+               <!--Moderator-->
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Raiquia/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">SrDuckington</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/d84df4e767b248559022f1ee1ae0f002.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">XxchixzerxX</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/XxchixzerxX/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Community Manager</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/98bbd148a0d548828ee605073ff2ea0f.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">TEAMGAM3R</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TEAMGAM3R/100.png"></a>
                   </div>
                </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">YoungSlicer</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/YoungSlicer/100.png"></a>
+                  </div>
+               </div>
+
+               <!--Helper-->
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pupped/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/kaneki/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">Kirsage</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Kirsage/100.png"></a>
+                  </div>
+               </div>               
             </div><!--End row-->
          </div><!--End container-->
       </section><!--End discography section-->
 
-      <!--Tours section-->
-      <section class="tour main bg-secondary" id="rules">
-         <!--Container-->
-         <div class="container">
-            <!--Row-->
-            <div class="row justify-content-center">
-               <div class="col-12 col-md-10 col-lg-9">
-                  <div class="block-content gap-one-bottom-md text-center">
-                     <div class="block-title">
-                        <h1 class="uppercase">Rules</h1>
-                     </div>
-                  </div>
-               </div>
-            </div><!--End row-->
-         </div><!--End container-->
-         <!--Container-->
-         <div class="container">
-            <!--Row-->
-            <div class="row justify-content-center">
-               <div class="col-12 col-lg-8 col-md-10">
-                  <ul class="block-tab">
-                     <!--Tab-->
-                     <li class="active">
-                        <div class="block-content gap-one-top-sm text-left">
-                           <div class="block-content">
-                              <div class="row">
-                                 <div class="col-lg-3 col-md-3">
-                                    <h4 class="switch-fot">1.</h4>
-                                 </div>
-
-                                <!--Chad will also edit these I think?-->
-
-                                 <div class="col-lg-4 col-md-4">
-                                    <h6 class="mb-0 opc-70 uppercase">Chat</h6><span>Do not spam, scam or insult other players.</span>
-                                 </div>
-                              </div>
-                           </div>
-                           <hr>
-                           <div class="block-content">
-                              <div class="row">
-                                 <div class="col-lg-3 col-md-3">
-                                    <h4 class="switch-fot">2.</h4>
-                                 </div>
-                                 <div class="col-lg-4 col-md-4">
-                                    <h6 class="mb-0 opc-70 uppercase">Hacking</h6><span>Do not use any form of hacked clients and/or mods that give you an advantage over other players.</span>
-                                 </div>
-                              </div>
-                           </div>
-                           <hr>
-                           <div class="block-content">
-                              <div class="row">
-                                 <div class="col-lg-3 col-md-3">
-                                    <h4 class="switch-fot">3.</h4>
-                                 </div>
-                                 <div class="col-lg-4 col-md-4">
-                                    <h6 class="mb-0 opc-70 uppercase">Staff</h6><span>Do not ask staff for items and/or extra privileges.</span>
-                                 </div>
-                              </div>
-                           </div>
-                           <hr>
-                           <div class="block-content">
-                              <div class="row">
-                                 <div class="col-lg-3 col-md-3">
-                                    <h4 class="switch-fot">4.</h4>
-                                 </div>
-                                 <div class="col-lg-4 col-md-4">
-                                    <h6 class="mb-0 opc-70 uppercase">Griefing</h6><span>Griefing is not allowed and will result in a tempban of 30 days.</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                     </li>
-                  </ul>
-               </div>
-            </div><!--End row-->
-         </div><!--End container-->
-      </section><!--End tour section-->
       <!--Divider section-->
       <section class="divider overlay" id="forums">
          <div class="background-img"><img alt="" src="https://trello-attachments.s3.amazonaws.com/5c6650d2bfde4d3799ebc267/5c9384a16f265a8b6239a939/4c28e54aa099e155aa9f52b161180451/2019-03-21_20.23.25.png"></div><!--Container-->
@@ -363,20 +324,20 @@
          <!--Container-->
          <div class="container">
             <ul class="news-list">
-               <li class="row align-items-center justify-content-around">
-                  <div class="col-12 col-md-6 order-md-2">
-                     <div class="block-content">
-                        <a href="#"><img alt="" class="img-fluid animated" src="https://trello-attachments.s3.amazonaws.com/5c6650d2bfde4d3799ebc267/5c9384a16f265a8b6239a939/fe7c19787cb5748ba48eb30516547f39/2019-03-21_20.19.12.png"></a>
+                  <li class="row align-items-center justify-content-around">
+                     <div class="col-12 col-md-6 order-md-2">
+                        <div class="block-content">
+                           <a href="#"><img alt="" class="img-fluid animated" src="https://i.imgur.com/RosUcSI.png"></a>
+                        </div>
                      </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-5 order-md-1">
-                     <div class="block-content text-left">
-                        <span class="mb-2 opc-70">Thursday, March 21, 2019 9:57 AM</span>
-                        <h2>Wessex Skyblock Season 2!</h2> 
-                        <p class="lead">Check out the new features introduced in the new season of skyblock. <a href="https://discuss.wessex.site/d/49-skyblock-season-2-wiki">Read more...</a></p>
+                     <div class="col-12 col-md-6 col-lg-5 order-md-1">
+                        <div class="block-content text-left">
+                           <span class="mb-2 opc-70">Monday, April 15, 2019 12:50 PM</span>
+                           <h2>Skyblock Update v3.1: The Chat Update</h2> 
+                           <p class="lead">his update introduces the all-new Chat System! (now with more text channels) <a href="https://discuss.wessex.site/d/101-skyblock-update-v3-1-the-chat-update/3">Read more...</a> </p>
+                        </div>
                      </div>
-                  </div>
-               </li>
+                  </li>
                <li class="row align-items-center justify-content-around">
                   <div class="col-12 col-md-6 order-1">
                      <div class="block-content">
@@ -402,20 +363,6 @@
                         <span class="mb-2 opc-70">March 1, 2019</span>
                         <h2>Skyblock Update v2.1.1</h2> 
                         <p class="lead">This update includes a better and improved vote system and many more. <a href="https://discuss.wessex.site/d/29-skyblock-update-v2-1-1">Read more...</a> </p>
-                     </div>
-                  </div>
-               </li>
-               <li class="row align-items-center justify-content-around">
-                  <div class="col-12 col-md-6 order-1">
-                     <div class="block-content">
-                        <a href="#"><img alt="" class="img-fluid animated" src="https://media.giphy.com/media/zDuStFVpRJIZ2/giphy.gif"></a>
-                     </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-5 order-2 text-left">
-                     <div class="block-content text-left">
-                        <span class="mb-2 opc-70">February 22, 2019</span>
-                        <h2>Wessex Skyblock Season 1</h2>
-                        <p class="lead">A new fresh season start for Skyblock. We added new features for the server! Including KOTH, Faster Crates, 7 Crates, Entity stack, Mob stack, Spawner stack, Hard Challenges and Rewards for Battlepass and a nice and neat rework for our /shop! <a href="https://discuss.wessex.site/d/28-wessex-skyblock-season-1">Read more...</a></p>
                      </div>
                   </div>
                </li>
