Changed top page Changed menu Changed staff skin image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          <div class="main-slider slider flexslider">
             <ul class="slides">
                <li>
-                  <div class="background-img overlay zoom"><img alt="" src="https://trello-attachments.s3.amazonaws.com/5c6650d2bfde4d3799ebc267/5c9384a16f265a8b6239a939/fe7c19787cb5748ba48eb30516547f39/2019-03-21_20.19.12.png"></div><!--Container-->
+                  <div class="background-img overlay zoom"><img alt="" src="https://i.imgur.com/HlNGkNl.png"></div><!--Container-->
                   <div class="container hero-content">
                      <!--Row-->
                      <div class="row">
@@ -75,7 +75,7 @@
                            <!--Inner hero-->
                            <div class="inner-hero logo">
                               <h1 class="large text-white uppercase mb-0">Demogexia Survival</h1>
-                              <h5 class="mb-0 text-white uppercase">An experience you will never forget</h5>
+                              <h5 class="mb-0 text-white uppercase">Welcome to the grind</h5>
                            </div>
                         </div><!--End row-->
                      </div><!--End container-->
@@ -104,19 +104,19 @@
                         <a class="scroll list-inline-item" href="#status">Status</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="http://store.wessex.site"><i class="fas fa-shopping-cart"></i> Store</a>
+                        <a class="scroll list-inline-item" href="http://store.demogexia.site"><i class="fas fa-shopping-cart"></i> Store</a>
                      </li>
                      <!--<li>
                         <a class="scroll list-inline-item" href="#staff">Staff</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="http://discuss.wessex.site"><i class="fas fa-comments"></i> Forums</a>
+                        <a class="scroll list-inline-item" href="https://forum.demogexia.site"><i class="fas fa-comments"></i> Forums</a>
                      </li>
                      <!--<li>
                         <a class="scroll list-inline-item" href="#rules">Rules</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="#news"><i class="far fa-newspaper"></i> News</a>
+                        <a class="scroll list-inline-item" href="https://forum.demogexia.site/t/news"><i class="far fa-newspaper"></i> News</a>
                      </li>
                      <!--<li>
                         <a class="scroll list-inline-item" href="http://bans.wessex.site"><i class="fas fa-gavel"></i> Bans</a>
@@ -125,7 +125,7 @@
                         <a class="scroll list-inline-item" href="https://www.facebook.com/groups/wessexcommunity/"><i class="fab fa-facebook-square"></i> FB Group</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="https://discord.wessex.site/"><i class="fab fa-discord"></i> Discord</a>
+                        <a class="scroll list-inline-item" href="https://discord.demogexia.site/"><i class="fab fa-discord"></i> Discord</a>
                      </li>
                      <!--<li>
                         <a class="scroll list-inline-item" href="#contact">Contact</a>
@@ -240,7 +240,7 @@
                <!--Administrator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/hyperVx2/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Senior Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/hyperVx2/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
@@ -252,12 +252,12 @@
                <!--Moderator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Raiquia/100.png"></a>
+                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pyrobyte/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">XxchixzerxX</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/XxchixzerxX/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">XxchixzerxX</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SkythekidRS/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
@@ -279,12 +279,12 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/kaneki/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Zenitsu/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Kirsage</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Kirsage/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">Kirsage</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/CaptainSparklez/100.png"></a>
                   </div>
                </div>               
             </div><!--End row-->
