--- a/index.html
+++ b/index.html
@@ -252,6 +252,11 @@
                <!--Moderator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">YoungSlicer</h5><a class="link" href="#staff">Senior Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/YoungSlicer/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
                      <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pyrobyte/100.png"></a>
                   </div>
                </div>
@@ -263,11 +268,6 @@
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">TEAMGAM3R</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TEAMGAM3R/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">YoungSlicer</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/YoungSlicer/100.png"></a>
                   </div>
                </div>
 
@@ -285,6 +285,11 @@
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">Kirsage</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/CaptainSparklez/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">Tester</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SrDuckington/100.png"></a>
                   </div>
                </div>               
             </div><!--End row-->
@@ -329,14 +334,14 @@
             <div class="row justify-content-center">
                <div class="col-12">
                   <ul class="block-social list-inline text-center">
-                     <li class="list-inline-item">
+                     <!--<li class="list-inline-item">
                         <a href="https://www.facebook.com/wessexnetwork"><i class="fab fa-facebook-square"></i></a>
-                     </li>
+                     </li>-->
                      <li class="list-inline-item">
-                        <a href="https://discord.wessex.site"><i class="fab fa-discord"></i></a>
+                        <a href="https://discord.demogexia.site"><i class="fab fa-discord"></i></a>
                      </li>    
                      <li class="list-inline-item">
-                        <a href="https://www.facebook.com/groups/wessexcommunity"><i class="fas fa-comments"></i></a>
+                        <a href="https://forum.demogexia.site"><i class="fas fa-comments"></i></a>
                      </li>                   
                      <!--<li class="list-inline-item">
                         <a href="#"><i class="socicon-instagram"></i></a>
@@ -357,7 +362,7 @@
          <div class="container">
             <div class="row justify-content-between align-items-center">
                <div class="col-md-6">
-                  <small class="small"><span>&copy; 2019 All Rights Reserved - created by</span> <a href="https://www.mc-market.org/members/53739/">chaz2601</a></small>
+                  <small class="small"><span>created by</span> <a href="https://www.mc-market.org/members/53739/">chaz2601</a></small>
                </div>
             </div>
          </div><!--End container-->
