--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          <div class="main-slider slider flexslider">
             <ul class="slides">
                <li>
-                  <div class="background-img overlay zoom"><img alt="" src="https://i.imgur.com/HlNGkNl.png"></div><!--Container-->
+                  <div class="background-img overlay zoom"><img alt="" src="https://i.imgur.com/bZrFIMm.png"></div><!--Container-->
                   <div class="container hero-content">
                      <!--Row-->
                      <div class="row">
@@ -182,7 +182,7 @@
       </section><!--End status section-->
       <!--About section-->
       <section class="about overlay main" id="store">
-         <div class="background-img"><img alt="" src="https://trello-attachments.s3.amazonaws.com/5c6650d2bfde4d3799ebc267/5c9384a16f265a8b6239a939/4f5d63ea4a937765bc1fe949eb358c3f/2019-03-21_20.21.19.png"></div><!--Container-->
+         <div class="background-img"><img alt="" src="https://i.imgur.com/bB1D0kZ.jpg"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row vertical-align">
@@ -298,7 +298,7 @@
 
       <!--Divider section-->
       <section class="divider overlay" id="forums">
-         <div class="background-img"><img alt="" src="https://trello-attachments.s3.amazonaws.com/5c6650d2bfde4d3799ebc267/5c9384a16f265a8b6239a939/4c28e54aa099e155aa9f52b161180451/2019-03-21_20.23.25.png"></div><!--Container-->
+         <div class="background-img"><img alt="" src="https://i.imgur.com/oXHnE7e.jpg"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row justify-content-center">
