--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <title>Demogexia - a Minecraft server</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-   <meta content="Not your ordinary Minecraft Skyblock game, believe me!" name="description">
+   <meta content="Welcome to the grind!" name="description">
    <meta content="width=device-width, initial-scale=1.0" name="viewport"><!-- Css -->
    <link href="css/bootstrap.css" media="all" rel="stylesheet" type="text/css">
    <link href="css/base.css" media="all" rel="stylesheet" type="text/css">
