--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">itzToughNutz</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Frostgamer02/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">Tester</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SrDuckington/100.png"></a>
                   </div>
                </div>               
