Added custom font

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,500,600,700" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,300,400,400i,600,700,800" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+   <link href="https://fonts.googleapis.com/css?family=Germania+One&display=swap" rel="stylesheet">
    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
@@ -155,7 +156,7 @@
             <!--Row-->
             <div class="row justify-content-center">
                <div class="list-inline-item">
-                  <h2 class="counter">Our server is <span id="counter" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565">0</span> other players!</h2><br>
+                  <h2 class="counter">Server is <span id="counter" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565">0</span> other players!</h2><br>
                </div>
                <div class="col-12 col-lg-4">
                   <div class="block-content text-center gap-one-bottom-sm">
@@ -197,16 +198,16 @@
                </div>
                <div class="col-lg-7">
                   <div class="row">
-                     <!--<div class="col-md-4">
+                     <div class="col-md-4">
                         <div class="block-content front-p">
-                           <h3 class="uppercase">Last sale</h3><span class=" p">-/-</span>
+                           <h3 class="uppercase"> </h3><span class=" p"> </span>
                         </div>
                      </div>
                      <div class="col-md-4">
                         <div class="block-content front-p">
-                           <h3 class="uppercase">Upcoming sale</h3><span class=" p">-/-</span>
+                           <h3 class="uppercase"> </h3><span class=" p"> </span>
                         </div>
-                     </div>-->
+                     </div>
                      <div class="col-md-4">
                         <div class="block-content text-md-right front-p">
                            <a class="btn btn-primary uppercase with-ico border-2" href="https://store.demogexia.site/"><i class="icon-ticket"></i>Visit store</a>
@@ -294,7 +295,7 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">Tester</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SrDuckington/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">Pseudo Admin</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SrDuckington/100.png"></a>
                   </div>
                </div>               
             </div><!--End row-->
