Changed index.html Updated counter-ip value Updated staff team info

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <!--Row-->
             <div class="row justify-content-center">
                <div class="list-inline-item">
-                  <h2 class="counter">Server is <span id="counter" counter-version="pc" counter-ip="play.wessex.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565">0</span> other players!</h2><br>
+                  <h2 class="counter">Server is <span id="counter" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565" counter-status>...</span>, with <span style="color:lightgreen;" counter-version="pc" counter-ip="play.demogexia.site" counter-port="25565">0</span> other players!</h2><br>
                </div>
                <div class="col-12 col-lg-4">
                   <div class="block-content text-center gap-one-bottom-sm">
@@ -189,9 +189,6 @@
             <div class="row vertical-align">
                <div class="col-lg-5 col-md-12">
                   <div class="front-p">
-
-                    <!-- Chad will edit these --> 
-
                      <h1 class="uppercase text-white">Help us grow!</h1>
                      <p class=" w-93">By supporting our server we can continue delivering quality updates in the future.</p>
                   </div>
@@ -246,7 +243,7 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/_DrStrange/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">TroyZS</h5><a class="link" href="#staff">Skyblock Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TroyZS/100.png"></a>
                   </div>
                </div>
 
@@ -258,39 +255,24 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pyrobyte/100.png"></a>
+                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Senior Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pyrobyte/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">XxchixzerxX</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SkythekidRS/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">TEAMGAM3R</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TEAMGAM3R/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">Asmodeius</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Asmodeius/100.png"></a>
                   </div>
                </div>
 
                <!--Helper-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pupped/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pupped/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Zenitsu/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Kirsage</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/CaptainSparklez/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">itzToughNutz</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Frostgamer02/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
