Changed index.yml - Changed images - Staff list refresh - Removed forum-related links - Changed strings - Added social media links - Credited original screenshots

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <div class="main-slider slider flexslider">
             <ul class="slides">
                <li>
-                  <div class="background-img overlay zoom"><img alt="" src="https://i.imgur.com/bZrFIMm.png"></div><!--Container-->
+                  <div class="background-img overlay zoom"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/3a-1514380918.png"></div><!--Container-->
                   <div class="container hero-content">
                      <!--Row-->
                      <div class="row">
@@ -76,7 +76,7 @@
                            <!--Inner hero-->
                            <div class="inner-hero logo">
                               <h1 class="large text-white uppercase mb-0">Demogexia Survival</h1>
-                              <h5 class="mb-0 text-white uppercase">Welcome to the grind</h5>
+                              <h5 class="mb-0 text-white uppercase">The semi-vanilla survival Minecraft server</h5>
                            </div>
                         </div><!--End row-->
                      </div><!--End container-->
@@ -105,32 +105,8 @@
                         <a class="scroll list-inline-item" href="#status">Status</a>
                      </li>-->
                      <li>
-                        <a class="scroll list-inline-item" href="http://store.demogexia.site"><i class="fas fa-shopping-cart"></i> Store</a>
+                        <a class="scroll list-inline-item" href="https://demogexia.site/store"><i class="fab fa-discord"></i> Discord</a>
                      </li>
-                     <!--<li>
-                        <a class="scroll list-inline-item" href="#staff">Staff</a>
-                     </li>-->
-                     <li>
-                        <a class="scroll list-inline-item" href="https://forum.demogexia.site"><i class="fas fa-comments"></i> Forums</a>
-                     </li>
-                     <!--<li>
-                        <a class="scroll list-inline-item" href="#rules">Rules</a>
-                     </li>-->
-                     <li>
-                        <a class="scroll list-inline-item" href="https://forum.demogexia.site/t/news"><i class="far fa-newspaper"></i> News</a>
-                     </li>
-                     <!--<li>
-                        <a class="scroll list-inline-item" href="http://bans.wessex.site"><i class="fas fa-gavel"></i> Bans</a>
-                     </li>-->
-                     <!--<li>
-                        <a class="scroll list-inline-item" href="https://www.facebook.com/groups/wessexcommunity/"><i class="fab fa-facebook-square"></i> FB Group</a>
-                     </li>-->
-                     <li>
-                        <a class="scroll list-inline-item" href="https://discord.demogexia.site/"><i class="fab fa-discord"></i> Discord</a>
-                     </li>
-                     <!--<li>
-                        <a class="scroll list-inline-item" href="#contact">Contact</a>
-                     </li>-->
                   </ul>
                </nav>
             </div>
@@ -183,14 +159,14 @@
       </section><!--End status section-->
       <!--About section-->
       <section class="about overlay main" id="store">
-         <div class="background-img"><img alt="" src="https://i.imgur.com/bB1D0kZ.jpg"></div><!--Container-->
+         <div class="background-img"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/17a-1514380986.png"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row vertical-align">
                <div class="col-lg-5 col-md-12">
                   <div class="front-p">
-                     <h1 class="uppercase text-white">Help us grow!</h1>
-                     <p class=" w-93">By supporting our server we can continue delivering quality updates in the future.</p>
+                     <h1 class="uppercase text-white">Visit the Store</h1>
+                     <p class=" w-93">Purchase ranks, cosmetics, and boosters to support the network.</p>
                   </div>
                </div>
                <div class="col-lg-7">
@@ -207,7 +183,7 @@
                      </div>
                      <div class="col-md-4">
                         <div class="block-content text-md-right front-p">
-                           <a class="btn btn-primary uppercase with-ico border-2" href="https://store.demogexia.site/"><i class="icon-ticket"></i>Visit store</a>
+                           <a class="btn btn-primary uppercase with-ico border-2" href="https://demogexia.site/store"><i class="icon-ticket"></i>Visit store</a>
                         </div>
                      </div>
                   </div>
@@ -238,12 +214,17 @@
                <!--Administrator-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Senior Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/hyperVx2/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">HyperVx2</h5><a class="link" href="#staff">Head Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/b2de7bcb1a9e4c5e96e7891e52b2ca2a/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">TroyZS</h5><a class="link" href="#staff">Skyblock Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/TroyZS/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">_DrStrange</h5><a class="link" href="#staff">Administrator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/40baa9819df144f7938b62bb2ee3360a/100.png"></a>
                   </div>
                </div>
 
@@ -255,45 +236,40 @@
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 uppercase opc-70">Raiquia</h5><a class="link" href="#staff">Senior Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pyrobyte/100.png"></a>
+                     <h5 class="mb-0 uppercase opc-70">BOTRaiquia</h5><a class="link" href="#staff">Community Manager</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/e3c062f6b72b414e875fa74559e1ed96/100.png"></a>
                   </div>
                </div>
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Asmodeius</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Asmodeius/100.png"></a>
+                     <h5 class="mb-0 opc-70 uppercase">TEAMGAM3R</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/524e1f681fa540699797865ad363847d/100.png"></a>
+                  </div>
+               </div>
+               <div class="col-12 col-md-6 col-lg-3">
+                  <div class="block-album block-content">
+                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator / Asst. Admin</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/68cc2b2807284256b9e1f836ed1093ad/100.png"></a>
                   </div>
                </div>
 
                <!--Helper-->
                <div class="col-12 col-md-6 col-lg-3">
                   <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">Pupped</h5><a class="link" href="#staff">Moderator</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Pupped/100.png"></a>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
                      <h5 class="mb-0 opc-70 uppercase">kaneki</h5><a class="link" href="#staff">Helper</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/Zenitsu/100.png"></a>
                   </div>
-               </div>
-               <div class="col-12 col-md-6 col-lg-3">
-                  <div class="block-album block-content">
-                     <h5 class="mb-0 opc-70 uppercase">SrDuckington</h5><a class="link" href="#staff">Pseudo Admin</a> <a href="#staff"><img alt="" class="animated" src="https://minotar.net/helm/SrDuckington/100.png"></a>
-                  </div>
-               </div>               
+               </div>             
             </div><!--End row-->
          </div><!--End container-->
       </section><!--End discography section-->
 
       <!--Divider section-->
       <section class="divider overlay" id="forums">
-         <div class="background-img"><img alt="" src="https://i.imgur.com/oXHnE7e.jpg"></div><!--Container-->
+         <div class="background-img"><img alt="" src="https://static.planetminecraft.com/files/resource_media/screenshot/1752/18a-1514380991.png"></div><!--Container-->
          <div class="container">
             <!--Row-->
             <div class="row justify-content-center">
                <div class="col-12 col-lg-10">
                   <div class="block-content text-center front-p">
-                     <h1 class="uppercase">Contribute to the Community</h1>
-                     <p class="lead">Share your thoughts, whats sellin', know whats happening.</p><a class="btn btn-primary uppercase with-ico border-2" href="https://forum.demogexia.site/"><i class="icon-ticket"></i>Visit forums</a>
+                     <h1 class="uppercase">Be Part of the Community</h1>
+                     <p class="lead">Chat with fellow Demogexia members and gamers alike.</p><a class="btn btn-primary uppercase with-ico border-2" href="https://demogexia.site/discord"><i class="icon-ticket"></i>Join Discord</a>
                   </div>
                </div>
             </div><!--End row-->
@@ -322,24 +298,15 @@
             <div class="row justify-content-center">
                <div class="col-12">
                   <ul class="block-social list-inline text-center">
-                     <!--<li class="list-inline-item">
-                        <a href="https://www.facebook.com/wessexnetwork"><i class="fab fa-facebook-square"></i></a>
-                     </li>-->
                      <li class="list-inline-item">
-                        <a href="https://discord.demogexia.site"><i class="fab fa-discord"></i></a>
-                     </li>    
-                     <li class="list-inline-item">
-                        <a href="https://forum.demogexia.site"><i class="fas fa-comments"></i></a>
-                     </li>                   
-                     <!--<li class="list-inline-item">
-                        <a href="#"><i class="socicon-instagram"></i></a>
+                        <a href="https://www.facebook.com/demogexia"><i class="fab fa-facebook-square"></i></a>
                      </li>
                      <li class="list-inline-item">
-                        <a href="#"><i class="socicon-twitter"></i></a>
+                        <a href="https://demogexia.site/discord"><i class="fab fa-discord"></i></a>
                      </li>
                      <li class="list-inline-item">
-                        <a href="#"><i class="socicon-youtube"></i></a>
-                     </li>-->
+                        <a href="https://twitter.com/demogexia"><i class="socicon-twitter"></i></a>
+                     </li>
                   </ul>
                </div>
             </div>
@@ -351,6 +318,7 @@
             <div class="row justify-content-between align-items-center">
                <div class="col-md-6">
                   <small class="small"><span>created by</span> <a href="https://www.mc-market.org/members/53739/">chaz2601</a></small>
+                  <small class="small"><span>/ pictures from</span> <a href="https://www.planetminecraft.com/project/castle-giebichenstein/">Castle Giebichenstein Map</a></small>
                </div>
             </div>
          </div><!--End container-->
